# atomic-timer

./: Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: lib.rs
