[package]
name = "atomic-timer"
version = "0.2.0"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/roboplc/atomic-timer"
description = "Atomic timer for Rust"
readme = "README.md"
keywords = ["atomic", "timer"]

[dependencies]
bma-ts = "0.1.14"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.134"
