[package]
name = "atomic-timer"
version = "0.3.3"
edition = "2021"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT"
repository = "https://github.com/roboplc/atomic-timer"
description = "Atomic timer for Rust"
readme = "README.md"
keywords = ["atomic", "timer"]

[dependencies]
bma-ts = "^0.2.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
